--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
     <link rel="stylesheet" href= "{% static '/style.css' %}" >
     <script src="https://unpkg.com/htmx.org@2.0.3"></script>
+    <script src="https://unpkg.com/htmx.org/dist/ext/ws.js"></script>
     <script src= "{% static 'post/js/actionbuttons.js' %}" ></script>
     {% block extra_css %}{% endblock %}
     
