--- a/userauths/templates/userauths/profile.html
+++ b/userauths/templates/userauths/profile.html
@@ -19,7 +19,7 @@
               src="{{profile.avatar}}"
               alt="{{ profile.user.username }}"
             />
-            <span></span>
+            {% comment %} <span></span> {% endcomment %}
           </div>
           <h2>{{ profile.name }}</h2>
           <p style="margin-bottom: 10px;"> @{{profile.user.username }}</p>
