--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,13 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
     <link rel="stylesheet" href= "{% static '/style.css' %}" >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/zuck.js/1.0.0/zuck.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/zuck.js/1.0.0/skins/snapgram.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/zuck.js/1.0.0/zuck.min.js"></script> 
     <script src="https://unpkg.com/htmx.org@2.0.3"></script>
     <script src="https://unpkg.com/htmx.org/dist/ext/ws.js"></script>
     <script src= "{% static 'post/js/actionbuttons.js' %}" ></script>
+
     {% block extra_css %}{% endblock %}
     
     <!-- The javascricpt file has been loaded just before the body ends or it will give DOM error -->
