--- a/templates/layouts/a.html
+++ b/templates/layouts/a.html
@@ -35,5 +35,6 @@
 {% endblock %}
 
 {% block extra_scripts %}
+<script src= "{% static '/story.js' %}" ></script>
 <script src= "{% static './index.js' %}" ></script>
 {% endblock %}
