--- a/story/templates/story/story.html
+++ b/story/templates/story/story.html
@@ -2,6 +2,8 @@
 
 {% block extra_css %}
     <link rel="stylesheet" href= "{% static '/story.css' %}" />
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/zuck.js/1.0.0/zuck.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/zuck.js/1.0.0/skins/snapgram.css"/> 
 {% endblock %}
 
 <div id="storyModal" class="modal">
