--- a/templates/snippets/sidebar.html
+++ b/templates/snippets/sidebar.html
@@ -39,7 +39,7 @@
     <a  class="menu-item " id="theme">
         <span><i class="uil uil-palette"></i></span><h3>Theme</h3>
     </a>
-    <a  class="menu-item ">
+    <a  class="menu-item " href="{% url 'settings' %}">
         <span><i class="uil uil-setting"></i></span><h3>Settings</h3>
     </a>
 </div>
