--- a/userauths/templates/userauths/editprofile.html
+++ b/userauths/templates/userauths/editprofile.html
@@ -8,13 +8,20 @@
           <div class="logo">
             <h3 style="padding: 20px; font-size: 20px;">Edit Profile</h3>
           </div>
+          <div class="header-preview" style="width: 100%; height: 150px; margin-bottom: 20px; overflow: hidden; border-radius: 8px;">
+            <img id="header-preview" src="{% if request.user.profile.header_image %}{{ request.user.profile.header_image.url }}{% else %}{% static 'userauths/bg.jpeg' %}{% endif %}" style="width: 100%; height: 100%; object-fit: cover;"/>
+          </div>
           <div class="profile-photo" style="width: 7rem;" >
             <img id="avatar" src="{{request.user.profile.avatar}}"/>  
-        </div>
-        <div style="display: flex; align-items: center;">
-          <h4 id="firstname" style="margin-right: 10px;">{{ request.user.profile.first_name }}</h4>
-          <h4 id="lastname">{{ request.user.profile.last_name }}</h4>
-      </div>          
+          </div>
+          <div style="display: flex; align-items: center;">
+            <h4 id="firstname" style="margin-right: 10px;">{{ request.user.profile.first_name }}</h4>
+            <h4 id="lastname">{{ request.user.profile.last_name }}</h4>
+          </div>          
+          <div style="margin: 10px 0;">
+            <label style="display: block; margin-bottom: 5px;">Header Image</label>
+            {{form.header_image}}
+          </div>
           {{form.image}} <br>
           {{form.first_name}} <br>
           {{form.last_name}} <br>
@@ -30,11 +37,24 @@
     <script>
     
       // This updates the avatar
-      const fileInput = document.querySelector('input[type="file"]');
+      const fileInput = document.querySelector('input[name="image"]');
   
       fileInput.addEventListener('change', (event) => {
       const file = event.target.files[0];
       const image = document.querySelector('#avatar');
+  
+      if (file && file.type.includes('image')) {
+          const url = URL.createObjectURL(file);
+          image.src = url;
+      }
+      });
+
+      // This updates the header image
+      const headerInput = document.querySelector('input[name="header_image"]');
+  
+      headerInput.addEventListener('change', (event) => {
+      const file = event.target.files[0];
+      const image = document.querySelector('#header-preview');
   
       if (file && file.type.includes('image')) {
           const url = URL.createObjectURL(file);
