--- a/comment/templates/comment/comment.html
+++ b/comment/templates/comment/comment.html
@@ -1,63 +1,74 @@
-<div class="message">
-    <div class="profile-photo">
-        {% if comment.author %}
-        <a href = "{% url 'userprofile' comment.author.profile.user %}">
-            <img src="{{ comment.author.profile.avatar }}" 
-            alt="{{ comment.author.profile.name }}" />
-        {% else %}
-            <span class="text-gray-500">no author</span>
-        {% endif %}
-    </div>
-    
-    <div class="message-body">
-        <h5>{{ comment.author.profile.name }}</h5>
-    </a>
-        <p class="text-muted">{{ comment.body }}</p>
-        
-        <div class="button-container" style="display: flex; align-items: center; justify-content: space-between; width: 100%;">
-
-            {%include 'snippets/comment_like.html' %}
-
-            {%  if user.is_authenticated and comment.author == user %} 
-                 <form action="{% url 'comment-delete' comment.id %}" method="POST" style="display:inline;" onsubmit="return confirm('Are you sure you want to delete this comment?');">
-                    {% csrf_token %}
-                    <button type="submit" >
-                        <i class="uil uil-trash-alt"  style="font-size: 16px;margin-left:10px;"> </i>
-                    </button>
-                    
-                </form> 
-            {%endif%}
-
-            {%if comment.replies.count > 0 %}
-                <button class="reply-button" onclick="toggleReplyForm(this)" style="margin-left:50px;">Replies  {{ comment.replies.count }}</button> 
-            {%else%}
-            <button class="reply-button" onclick="toggleReplyForm(this)" style="margin-left:70px;">Add Reply</button> 
-            {%endif%}
-
+<div class="comments-container">
+    <div class="message" data-author="{{ comment.author.username }}" data-date="{{ comment.created_at|date:'c' }}">
+        <div class="profile-photo">
+            {% if comment.author %}
+            <a href="{% url 'userprofile' comment.author.profile.user %}">
+                <img src="{{ comment.author.profile.avatar }}" 
+                alt="{{ comment.author.profile.name }}" />
+            {% else %}
+                <span class="text-gray-500">no author</span>
+            {% endif %}
         </div>
-        <div class="reply-form" style="display: none;">
-            {% for reply in comment.replies.all%}
-            {% include 'comment/reply.html' %}
-            {%endfor%}
-
-            <div class="card !pb-0 -mt-3">
-                <form method="POST" action="{% url 'reply-sent' comment.id %}">
-                    <div class="search-bar">
+        
+        <div class="message-body">
+            <div class="comment-header">
+                <div class="user-info">
+                    <h5>{{ comment.author.profile.name }}</h5>
+                    <span class="comment-time">{{ comment.created_at|timesince }} ago</span>
+                </div>
+                {% if user.is_authenticated and comment.author == user %}
+                <div class="comment-actions">
+                    <form action="{% url 'comment-delete' comment.id %}" method="POST" class="delete-form" onsubmit="return confirm('Are you sure you want to delete this comment?');">
                         {% csrf_token %}
-                        {{replyform}}
-                    </div>
-                    <button @click="open = false" class="btn btn-primary" type="submit">Reply</button>
-                </form>
+                        <button type="submit" class="delete-btn">
+                            <i class="uil uil-trash-alt"></i>
+                        </button>
+                    </form>
+                </div>
+                {% endif %}
+            </div>
+
+            <p class="comment-text">{{ comment.body }}</p>
+            
+            <div class="button-container">
+                {% include 'snippets/comment_like.html' %}
+
+                <button class="reply-button" onclick="toggleReplyForm(this)">
+                    <i class="uil uil-comment-dots"></i>
+                    {% if comment.replies.count > 0 %}
+                        Replies ({{ comment.replies.count }})
+                    {% else %}
+                        Reply
+                    {% endif %}
+                </button>
+            </div>
+
+            <div class="reply-form" style="display: none;">
+                {% for reply in comment.replies.all %}
+                    {% include 'comment/reply.html' %}
+                {% endfor %}
+
+                <div class="reply-input">
+                    <form method="POST" action="{% url 'reply-sent' comment.id %}" class="reply-form-input">
+                        {% csrf_token %}
+                        <div class="search-bar">
+                            {{replyform}}
+                        </div>
+                        <button class="btn btn-primary" type="submit">
+                            <i class="uil uil-message"></i> Reply
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
-        
-        <script>
-            function toggleReplyForm(button) {
-                const replyForm = button.closest('.button-container').nextElementSibling;
-                replyForm.style.display = replyForm.style.display === 'none' ? 'block' : 'none';
-            }
-        </script>
-        </div> 
-
-       
+    </div>
 </div>
+
+<script>
+    function toggleReplyForm(button) {
+        const replyForm = button.closest('.message-body').querySelector('.reply-form');
+        const isHidden = replyForm.style.display === 'none';
+        replyForm.style.display = isHidden ? 'block' : 'none';
+        button.innerHTML = `<i class="uil uil-comment-dots"></i> ${isHidden ? 'Hide Replies' : 'Reply'}`;
+    }
+</script>
